# ray-tracing-examp

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  conanfile.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: point3.cpp  point3.h
test/: CMakeLists.txt
test/source/: ray_tracing_examp_test.cpp
